# C

./: .gitignore  CMakeLists.txt  c.md  main.c
datatype/: array.c  enum.c  string.c  struct.c  union.c
grammar/: address.c  define.c  include.c  include.h  pointer.c  sizeof.c  stack_variable.c  variable.c
io/: file.c  file_copy.c  getchar.c  scanf.c
memory/: align.c  alloc.c  memory.c
process/: alloc.c  atexit.c  env.c  fork.c  main.c  process.c
